// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pep-search PepSearch should match snapshot 1`] = `
<div>
  <Formik
    enableReinitialize={false}
    initialValues={
      Object {
        "name": "Saoirse Chadwick",
      }
    }
    isInitialValid={false}
    onSubmit={[MockFunction]}
    render={[Function]}
    validateOnBlur={true}
    validateOnChange={true}
  />
</div>
`;

exports[`pep-search renderForm should match snapshot 1`] = `
<div>
  <Component />
</div>
`;

exports[`pep-search renderLoading should match snapshot 1`] = `
<div>
  <div>
    <Loader
      body={false}
    />
  </div>
</div>
`;

exports[`pep-search renderNoResult should match snapshot 1`] = `
<div>
  <div
    className="ml-8"
  >
    <div>
      Results
    </div>
    <div>
      <div
        className="mr-8"
      >
        <FaRegTimesCircle />
      </div>
      <div>
        No Result Found for '
        <Component />
        '. Search conducted for '
        <Component />
        ' on 
        10 October 19 23:39PM
      </div>
    </div>
  </div>
</div>
`;
